Updates from Overleaf

--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -254,22 +254,28 @@ After looking at the simulated spectra, we wanted to apply our techniques to obs
 \textbf{MASKING OF REGIONS}
 LTE models to fit the model and try to enhance the hidden molecules
 \textbf{MORE EXPLANATION NEEDED}
+% \begin{figure}[!ht]
+%     \centering
+%     \includegraphics[width=\linewidth]{Figures/FullSpectrum_GWLup.pdf}
+%     \caption{The continuum subtracted spectrum of GWLup}
+%     \label{fig: GWLup}
+% \end{figure}
+% \begin{figure}[!ht]
+%     \centering
+%     \includegraphics[width=\linewidth]{Figures/FullSpectrum_Sz98.pdf}
+%     \caption{The continuum subtracted spectrum of Sz98}
+%     \label{fig: Sz98}
+% \end{figure}
+% \begin{figure}[!ht]
+%     \centering
+%     \includegraphics[width=\linewidth]{Figures/FullSpectrum_V1094Sco.pdf}
+%     \caption{The continuum subtracted spectrum of V1094Sco}
+%     \label{fig: V1094Sco}
+% \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{Figures/FullSpectrum_GWLup.pdf}
-    \caption{The continuum subtracted spectrum of GWLup}
-    \label{fig: GWLup}
-\end{figure}
-\begin{figure}[!ht]
-    \centering
-    \includegraphics[width=\linewidth]{Figures/FullSpectrum_Sz98.pdf}
-    \caption{The continuum subtracted spectrum of Sz98}
-    \label{fig: Sz98}
-\end{figure}
-\begin{figure}[!ht]
-    \centering
-    \includegraphics[width=\linewidth]{Figures/FullSpectrum_V1094Sco.pdf}
-    \caption{The continuum subtracted spectrum of V1094Sco}
+    \includegraphics[width=\linewidth]{Figures/Measurements.pdf}
+    \caption{The continuum subtracted spectrum}
     \label{fig: V1094Sco}
 \end{figure}
 
@@ -544,21 +550,27 @@ OH              & Detection      & Detection     & Detection         \\ \hline
 
 We used 1D LTE models to fit CO and H\2O in the region 4.9-6.5 $\mu$m.
 
+% \begin{figure}[!ht]
+%     \centering
+%     \includegraphics[width=\linewidth]{Figures/Fit_GWLup.pdf}
+%     \caption{The fitted H\2O and CO spectra using a 1D LTE model between 4.9 $\mu$m and 6.5$\mu$m for GWLup}
+%     \label{fig: fit gwlup}
+% \end{figure}
+% \begin{figure}[!ht]
+%     \centering
+%     \includegraphics[width=\linewidth]{Figures/Fit_Sz98.pdf}
+%     \caption{The fitted H\2O and CO spectra using a 1D LTE model between 4.9 $\mu$m and 6.5$\mu$m for Sz98}
+%     \label{fig: fit sz98}
+% \end{figure}
+% \begin{figure}[!ht]
+%     \centering
+%     \includegraphics[width=\linewidth]{Figures/Fit_V1094Sco.pdf}
+%     \caption{The fitted H\2O and CO spectra using a 1D LTE model between 4.9 $\mu$m and 6.5$\mu$m for V1094Sco}
+%     \label{fig: v1094sco}
+% \end{figure}
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{Figures/Fit_GWLup.pdf}
-    \caption{The fitted H\2O and CO spectra using a 1D LTE model between 4.9 $\mu$m and 6.5$\mu$m for GWLup}
-    \label{fig: fit gwlup}
-\end{figure}
-\begin{figure}[!ht]
-    \centering
-    \includegraphics[width=\linewidth]{Figures/Fit_Sz98.pdf}
-    \caption{The fitted H\2O and CO spectra using a 1D LTE model between 4.9 $\mu$m and 6.5$\mu$m for Sz98}
-    \label{fig: fit sz98}
-\end{figure}
-\begin{figure}[!ht]
-    \centering
-    \includegraphics[width=\linewidth]{Figures/Fit_V1094Sco.pdf}
+    \includegraphics[width=\linewidth]{Figures/Fits.pdf}
     \caption{The fitted H\2O and CO spectra using a 1D LTE model between 4.9 $\mu$m and 6.5$\mu$m for V1094Sco}
     \label{fig: v1094sco}
 \end{figure}
