Updates from Overleaf

--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -313,8 +313,8 @@ Lastly, we inspected the distribution of nitrogen-bearing molecules: HCN, HNC, N
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{Figures/AbundanceN2.pdf}
-    \caption{The distribution of HCN, HNC, NH\3, and NO across the disk of the fiducial model.}
+    \includegraphics[width=.8\linewidth]{Figures/AbundanceN2.pdf}
+    \caption{The distribution of N\2 across the disk of the fiducial model.}
     \label{fig: nitrogen distribution}
 \end{figure}
 
